# cpp-server-boilerplate

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.cmake.example
apps/: CMakeLists.txt  app.cpp
cmake/: i686-pc-linux-gnu.cmake  i686-w64-mingw32.cmake
public/: index.html  main.js  style.css
public/errors/: 404.html
src/: CMakeLists.txt
src/Infrastructure/: CMakeLists.txt
src/Infrastructure/Server/: Application.cpp  Application.h  CMakeLists.txt  RequestHandlerFactory.cpp  RequestHandlerFactory.h  ServerStarter.h  Thread.h
src/Infrastructure/Server/RequestHandlers/: FileRequestHandler.cpp  FileRequestHandler.h  HelloRequestHandler.cpp  HelloRequestHandler.h
